fix: locking in DefaultCollectionInsertOperation
test: multithread insertion test (CollectionSelectInsertOperationMultiThreadedTestCase)
Signed-off-by: sepgh <13250403+sepgh@users.noreply.github.com>